--- a/assets/css/product-detail/basic.css
+++ b/assets/css/product-detail/basic.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     border-style: solid;
     border-width: 0;
-    border-color: rgb((39 39 39) / .12)
+    border-color: rgb(39 39 39 / .12)
 }
 
 html {
