--- a/assets/css/product-detail/carousel.css
+++ b/assets/css/product-detail/carousel.css
@@ -26,7 +26,9 @@ carousel {
     margin-inline-end: auto;
 
     scroll-snap-align: center;
-    scroll-snap-stop: always
+    scroll-snap-stop: always;
+
+    border-radius: 0.75rem;
 }
 
 #carousel-thumbnail {
